--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/marbiz-frontend/node_modules/*
-/marbiz-backend/node_modules/*
-/marbiz-api/node_modules/*
+/marbiz-frontend/node_modules
+/marbiz-backend/node_modules
+/marbiz-api/node_modules
 /node_modules*
 
 
