--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
-    "flowbite": "^1.8.1",
+    "bootstrap": "^5.3.1",
+    "bs5-lightbox": "^1.8.3",
     "mdb-react-ui-kit": "^6.3.0",
+    "mdb-ui-kit": "^6.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -49,7 +51,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3"
+    "postcss": "^8.4.29"
   }
 }
