--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -11,11 +11,13 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "bs5-lightbox": "^1.8.3",
-    "mdb-react-ui-kit": "^6.3.0",
+    "jquery": "^3.7.1",
     "mdb-ui-kit": "^6.4.1",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-18-image-lightbox": "^5.1.4",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.3",
     "redux": "^4.2.1",
