--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-18-image-lightbox": "^5.1.4",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.0",
     "react-router-dom": "^6.15.0",
