--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 marbiz-frontend/node_modules
 marbiz-frontend/package-lock.json
 
+marbiz-frontend/node_modules
+
 marbiz-backend/node_modules
 marbiz-backend/package-lock.json
 
