--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -33,9 +33,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build:dev": "react-scripts build",
-    "build": "react-scripts build",
+    "build": "react-scripts  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
