--- a/marbiz-api/package.json
+++ b/marbiz-api/package.json
@@ -25,6 +25,7 @@
     "loopback-connector-rest": "^3.7.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
+    "mongodb": "^6.1.0",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
@@ -38,5 +39,5 @@
     "url": ""
   },
   "license": "UNLICENSED",
-  "description": "Moverstrip Api"
+  "description": "marbiz-api"
 }
