--- a/marbiz-backend/package.json
+++ b/marbiz-backend/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "match-sorter": "^6.3.1",
+    "mdbreact": "^5.2.0",
     "metismenujs": "^1.4.0",
     "moment": "^2.29.4",
     "namor": "^3.0.1",
@@ -64,6 +65,7 @@
     "react-input-mask": "^2.0.4",
     "react-jvectormap": "^0.0.16",
     "react-leaflet": "^4.2.1",
+    "react-multi-select-component": "^4.3.4",
     "react-native-inline-datepicker": "^1.2.0",
     "react-number-format": "^5.3.0",
     "react-rangeslider": "^2.2.0",
@@ -88,6 +90,7 @@
     "redux-saga": "^1.2.3",
     "reselect": "4.1.8",
     "simplebar-react": "^3.2.4",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.0.4",
     "toastr": "^2.1.4",
     "yup": "^1.2.0"
