--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@egjs/react-flicking": "^4.11.0",
     "@emailjs/browser": "^3.11.0",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
