--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -24,6 +24,7 @@
     "react-18-image-lightbox": "^5.1.4",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
