--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-google-login-component": "^0.9.3",
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
