--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -27,6 +27,7 @@
     "react-google-login": "^5.2.2",
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.11.0",
+    "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
