--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -7,6 +7,7 @@
     "@emailjs/browser": "^3.11.0",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,7 +26,6 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
-    "react-google-login-component": "^0.9.3",
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
