--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@egjs/react-flicking": "^4.11.0",
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.1",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@react-oauth/google": "^0.11.1",
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29"
   }
