enquiry api update user and business login

--- a/marbiz-api/server/model-config.json
+++ b/marbiz-api/server/model-config.json
@@ -71,5 +71,9 @@
   "Enquiry": {
     "dataSource": "mongoDB",
     "public": true
+  },
+  "Video": {
+    "dataSource": "mongoDB",
+    "public": true
   }
 }
