--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.1",
     "browser-image-compression": "^2.0.2",
     "bs5-lightbox": "^1.8.3",
+    "eslint-config-react-app": "^7.0.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^6.3.0",
@@ -29,10 +30,12 @@
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.11.0",
     "react-owl-carousel": "^2.3.3",
+    "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
+    "reactstrap": "^9.2.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "sweetalert2": "^11.6.13",
