--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.1",
     "browser-image-compression": "^2.0.2",
     "bs5-lightbox": "^1.8.3",
+    "framer-motion": "^10.16.4",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^6.3.0",
