--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -36,8 +36,10 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.6.13",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
