--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^6.3.0",
     "mdb-ui-kit": "^6.4.1",
+    "mdbreact": "^5.2.0",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "postcss-loader": "^7.3.3",
