--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -33,6 +33,7 @@
     "react-google-login": "^5.2.2",
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.11.0",
+    "react-otp-input": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
