--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-grid-gallery": "^1.0.0",
+    "react-hover-video-player": "^10.0.1",
     "react-icons": "^4.11.0",
     "react-otp-input": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
@@ -41,6 +42,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
+    "react-tap-event-plugin": "^3.0.3",
     "reactstrap": "^9.2.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
