--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "browser-image-compression": "^2.0.2",
