--- a/marbiz-frontend/package.json
+++ b/marbiz-frontend/package.json
@@ -15,6 +15,7 @@
     "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.11.1",
     "browser-image-compression": "^2.0.2",
     "bs5-lightbox": "^1.8.3",
     "eslint-config-react-app": "^7.0.1",
